fix horizontal alignment of navbar with content below

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -30,12 +30,13 @@ body {
 
 .site-main {
   flex: 1;
-  padding: 2.5rem 1.4rem 3rem;
+  padding: 2.5rem 0 3rem;
 }
 
 .container {
   max-width: var(--content-width);
   margin: 0 auto;
+  padding: 0 1.4rem;
 }
 
 .site-header {
